- refactored the templates to use the responsive layouts - Fixed the menu so that it works on mobile - refactored the signin out - Disabled some bad routes - Added a feature to hide the menu when not logged in. - Streamlined the menu

--- a/quick-cue.less
+++ b/quick-cue.less
@@ -8,10 +8,11 @@
 
 @text-color : #000;
 //Layout
-@nav-bar-offset : 70px;
+@nav-bar-offset : 0;
 
 @spreadsheet-padding: 2px;
 body {
+	//background: #000;
 	//background:lighten(@primary-color, 85%);
 }
 
